# cmake-firebird3

./: README.md
cmake/: CmakeLists-boot.txt  CmakeLists.txt  create_msgs.bat  engine12.dll.manifest  preprocess.bat  readme.txt  vcproj2cmake.ps1
cmake/alice/: CmakeLists.txt
cmake/btyacc/: CMakeLists.txt
cmake/build_msg/: CMakeLists.txt
cmake/burp/: CMakeLists.txt
cmake/codes/: CMakeLists.txt
cmake/common/: CMakeLists.txt
cmake/defs/: build.def  burp.def  burp32.def  dsql.def  fbclient_s.def  fbrmclib.def  firebird.def  gds32.def  ib_udf.def  ib_util.def  intl.def  isql.def  iutls.def  jrd.def  plugin.def  remote.def  udr_engine.def  utls.def
cmake/empbuild/: CMakeLists.txt
cmake/engine/: CMakeLists.txt
cmake/fb2control/: CMakeLists.txt
cmake/fb_lock_print/: CMakeLists.txt
cmake/fbguard/: CMakeLists.txt
cmake/fbrmclib/: CMakeLists.txt
cmake/fbserver/: CMakeLists.txt
cmake/fbtrace/: CMakeLists.txt
cmake/fbudf/: CMakeLists.txt
cmake/gbak/: CMakeLists.txt
cmake/gpre/: CMakeLists.txt
cmake/gpre_boot/: CMakeLists.txt
cmake/gpre_common/: CMakeLists.txt
cmake/ib_udf/: CMakeLists.txt
cmake/ib_util/: CMakeLists.txt
cmake/icu/: CmakeLists.txt  makedata.cmake  testdata.cmake
cmake/icu/cintltst/: CMakeLists.txt
cmake/icu/common/: CMakeLists.txt
cmake/icu/ctestfw/: CMakeLists.txt
cmake/icu/decmn/: CMakeLists.txt
cmake/icu/derb/: CMakeLists.txt
cmake/icu/genbrk/: CMakeLists.txt
cmake/icu/genccode/: CMakeLists.txt
cmake/icu/gencmn/: CMakeLists.txt
cmake/icu/gencnval/: CMakeLists.txt
cmake/icu/gennames/: CMakeLists.txt
cmake/icu/gennorm/: CMakeLists.txt
cmake/icu/genpname/: CMakeLists.txt
cmake/icu/genprops/: CMakeLists.txt
cmake/icu/genrb/: CMakeLists.txt
cmake/icu/gensprep/: CMakeLists.txt
cmake/icu/gentest/: CMakeLists.txt
cmake/icu/genuca/: CMakeLists.txt
cmake/icu/i18n/: CMakeLists.txt
cmake/icu/icuswap/: CMakeLists.txt
cmake/icu/intltest/: CMakeLists.txt
cmake/icu/io/: CMakeLists.txt
cmake/icu/iotest/: CMakeLists.txt
cmake/icu/layout/: CMakeLists.txt
cmake/icu/layoutex/: CMakeLists.txt
cmake/icu/makeconv/: CMakeLists.txt
cmake/icu/makedata/: CmakeLists.txt
cmake/icu/pkgdata/: CMakeLists.txt
cmake/icu/stubdata/: CMakeLists.txt
cmake/icu/toolutil/: CMakeLists.txt
cmake/icu/uconv/: CMakeLists.txt
cmake/intl/: CMakeLists.txt
cmake/isql/: CMakeLists.txt
cmake/remote/: CMakeLists.txt
cmake/udr_engine/: CMakeLists.txt
cmake/yvalve/: CMakeLists.txt
